# ffis

./: .travis.yml  Makefile  README.md
compile/c/: Makefile  mylib.c  mylib.h
compile/cpp/: Makefile  mylib.cpp
compile/go/: .gitignore  Makefile  README.md  go.mod  mylib.go
compile/rust/: .gitignore  Cargo.toml  Makefile  README.md
compile/rust/src/: lib.rs
script/go/: go.mod  main.go
script/javascript/: README.md  index.js  package.json
script/python/: main.py
script/ruby/: main.rb
