[package]
name = "rust"
version = "0.1.0"
authors = ["fengche <2395434298@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "a sample common ffi"
publish = false

[lib]
name="mylib"
crate-type = ["cdylib"]

[build-dependencies]
bindgen = "*"

[dependencies]
libc = "*"